--- a/platforms/hyperledger-fabric/releases/dev/manufacturer/ca/ca.yaml
+++ b/platforms/hyperledger-fabric/releases/dev/manufacturer/ca/ca.yaml
@@ -26,7 +26,7 @@ spec:
       vault:
         type: hashicorp
         network: fabric
-        address: http://172.17.220.191:8200
+        address: http://host.minikube.internal:8200
         authPath: localmanufacturer
         secretEngine: secretsv2
         secretPrefix: "data/localmanufacturer"
