bug(besu): fix in ws service mapping for besu node
Signed-off-by: alvaro.picazo.haase <alvaro.picazo.haase@accenture.com>

--- a/platforms/hyperledger-besu/charts/besu-node/templates/node-service.yaml
+++ b/platforms/hyperledger-besu/charts/besu-node/templates/node-service.yaml
@@ -140,4 +140,6 @@ metadata:
 spec:
   hostname: '{{ .Release.Name }}ws.{{ .Values.global.proxy.externalUrlSuffix }}'
   prefix: /
-  service: http://{{ include "besu-node.fullname" . }}.{{ .Release.Namespace }}:{{ .Values.node.besu.ws.port }}
+  service: {{ include "besu-node.fullname" . }}.{{ .Release.Namespace }}:{{ .Values.node.besu.ws.port }}
+  allow_upgrade:
+  - websocket
